Fix a bunch of IDE warnings
Fix spelling typos, remove old Java 7 syntax, use new lambda syntax, and
more.

Change-Id: I8602636e3ad5cec7134c31d45a0fe24046f3b51a